--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Hind" rel="stylesheet">
 
-    <!-- <link rel="stylesheet" href="style.css"> -->
+    <link rel="stylesheet" href="style.css">
 
     <style>
         body {
@@ -47,7 +47,7 @@
         .email_body {
             width: 100%;
             padding: 0 15px;
-            background: #26DAF3;
+            background: #00cdf0;
             max-width: 600px;
         }
         
@@ -147,7 +147,7 @@
         }
         
         .rodape button {
-            background: #00B6EA;
+            background: #26DAF3;
             border: transparent;
             border-radius: 30px;
             width: 200px;
@@ -332,13 +332,6 @@
     </style>
 
 
-
-
-</head>
-
-
-<body>
-
     <div class="container">
         <div class="row">
             <div class="wrapper">
@@ -361,7 +354,7 @@
                 </div>
                 <div class="email-text">
                     <div class="row">
-                        <div class="col-sm-8"><img src="img/mulheres.png"></div>
+                        <div class="col-sm-8"><img src="img/img-mulheres.jpg"></div>
                         <div class="col-4 ">
                             <p>Estamos felizes em te ter <br>com a gente e estamos prontas <br> pra te ajudar a encontrar <br> uma companheira de viagens.</p>
                             <p>Nossa intenção aqui não é tirar <br> a sua liberdade de viajar sozinha,<br> mas abrir possibilidades para que <br> essa jornada seja ainda melhor.</p>
@@ -379,7 +372,7 @@
                     </div>
                 </div>
                 <div class="email-text3">
-                    <a href=""><img src="img/fundo-email-compartilhamento.jpg"> </a>
+                    <img src="img/faixa-compartilhamento.jpg">
                     <ul class="list-inline text-center">
                         <li>
                             <a href="https://www.facebook.com/sharer/sharer.php?u=www.vamocomigo.com%2Fapp"><img src="img/icon-facebook-vamo-comigo.png"></a>
@@ -429,6 +422,6 @@
     </div>
     </div>
     </div>
-</body>
+    </body>
 
 </html>
